# flex-schema

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  README-NODEJS.md  README.md  SQLITE_ADAPTER.md  VERIFICATION_REPORT.md  package.json  pyproject.toml  testdb.sqlite  tsconfig.json
docs/: FUNCTION_METHOD.md
examples/: basic.py  function_example.py  orm_style_example.py  query_operators_example.py  sqlite_example.py
examples-js/: basic.js  comparison_with_python.md  query_operators_example.js  typescript_example.ts  validation_test.js
src-js/: flexschema.ts  index.ts
src/flexschema/: __init__.py  flexschema.py  flexschema_lite.py  version.py
tests/: Dockerfile  docker-compose.yml  entrypoint.sh  launch.sh  test_example.py  test_function_method.py  test_function_method_mock.py  test_mongodb_operators.py  test_problem_statement_examples.py  test_sqlite.py
tests/app/: seed_mysql.py  stress_queries.py
tests/app/inputs/: seed_contacts.json  seed_data.json  seed_group_members.json  seed_groups.json  seed_messages.json  seed_profiles.json
